# dv

./: .bazelignore  .bazelrc  .gitignore  AGENTS.md  BUILD.bazel  CMakeLists.txt  MODULE.bazel  README.md  VERSION.toml
.github/: copilot-instructions.md
.github/workflows/: _c_cpp.yaml  _publish-python.yaml  _publish-rust.yaml  _python.yaml  _rust.yaml  _test-c.yaml  _test-cpp.yaml  _test-python.yaml  _test-rust.yaml  ci.yml  main.yaml  publish.yaml  rust.yaml
core/: BUILD.bazel  Cargo.toml  DOCS.md  serve_docs.py
core/src/: lib.rs  units.rs
core/tests/: integration_tests.rs  operator_tests.rs  units_tests.rs  version_test.rs
cpp/: BUILD.bazel  CMakeLists.txt  README.md
cpp/capi/: Cargo.toml
cpp/capi/src/: lib.rs
cpp/examples/: demo_c.c  demo_cpp.cpp
cpp/include/: dv.hpp  dv_c.h
docs/: BUILD.bazel  README.md  docusaurus.config.ts  package.json  pnpm-lock.yaml
docs/docs/: c_cpp.md  faqs.md  intro.md  python.md  rust.md
docs/docs/dev/: _category_.json  code.md  guidelines.md
docs/src/components/: LanguageCards.module.css  LanguageCards.tsx
docs/src/components/DownloadCounter/: index.tsx  styles.module.css
docs/src/components/HomepageFeatures/: index.tsx
docs/src/components/LanguageCards/: LanguageCards.module.css  index.tsx
docs/src/css/: custom.css
docs/src/pages/: index.module.css  index.tsx
docs/src/theme/: Root.tsx
docs/static/img/: Units.drawio
examples/: README.md
examples/c/: BUILD.bazel  CMakeLists.txt  main.c
examples/cpp/: BUILD.bazel  CMakeLists.txt  main.cpp
examples/python/: BUILD.bazel  main.py
examples/rust/: BUILD.bazel  Cargo.toml
examples/rust/src/: main.rs
ffi/diplomat/: BUILD.bazel  Cargo.toml
ffi/diplomat/src/: lib.rs
python/: BUILD.bazel  Cargo.toml  maturin.bzl  pip-readme.md  pyproject.toml
python/dv/: __init__.py
python/dv_py/: __init__.py
python/src/: lib.rs
python/tests/: test_dv.py
tests/: BUILD.bazel  integration_cpp_test.cpp  integration_python_tests.py  integration_rust_tests.rs  math_tests.json  regression_cpp_tests.cpp  regression_python_tests.py  regression_rust_tests.rs  schema.json  units_tests.json
tools/: BUILD.bazel  requirements.in  requirements.txt  update_versions.py
tools/diplomat_codegen/: BUILD.bazel  main.rs
