[package]
name = "dv"
version = "0.1.1"
edition = "2021"
authors = [ "Alex Tacescu <alextac98@gmail.com>",]
description = "Core Rust library for DimensionalVariable, a multi-language library for handling physical quantities with units."
license = "Apache-2.0"
homepage = "https://dv.alextac.com"
repository = "https://github.com/alextac98/dv"
readme = "DOCS.md"
keywords = [ "units", "dimensions", "physical-quantities", "unit-conversion", "unit-checking",]
categories = [ "science::robotics", "science", "mathematics", "aerospace",]

[lib]
name = "dv_rs"
path = "src/lib.rs"

[dependencies]

[build-dependencies]
