load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

alias(
    name = "dv_headers",
    actual = ":dv_cpp",
)

alias(
    name = "dv_c",
    actual = "//generated/diplomat/c:dv_diplomat_c",
)

cc_library(
    name = "dv_cpp",
    hdrs = ["include/dv.hpp"],
    includes = ["include"],
    deps = ["//generated/diplomat/cpp:dv_diplomat_cpp"],
)
