load("@rules_python//python:defs.bzl", "py_library", "py_test")
load("@rules_rust//rust:defs.bzl", "rust_shared_library")
load("@rules_rust_pyo3//:defs.bzl", "pyo3_extension")

package(default_visibility = ["//visibility:public"])

# =============================================================================
# Python PyO3 Extension Module
# =============================================================================

pyo3_extension(
    name = "dv_py",
    srcs = ["src/lib.rs"],
    deps = ["//core:dv_rs", "@crates//:pyo3"],
)

# Python library that exposes the extension module
# This creates a "dv" package by making __init__.py available at the root level
py_library(
    name = "dv",
    srcs = [
        "dv/__init__.py",
    ],
    data = [":dv_py"],
    imports = ["."],
    visibility = ["//visibility:public"],
)

# =============================================================================
# Tests
# =============================================================================

py_test(
    name = "test_dv",
    srcs = ["tests/test_dv.py"],
    deps = [
        ":dv",
        "@pypi//pytest:pkg",
    ],
)

