load("@rules_python//python:defs.bzl", "py_library", "py_test")
load("@rules_rust_pyo3//:defs.bzl", "pyo3_extension")

package(default_visibility = ["//visibility:public"])

# Export files for version management and publishing
exports_files([
    "Cargo.toml",
    "pyproject.toml",
])

# =============================================================================
# Python PyO3 Extension Module
# =============================================================================

pyo3_extension(
    name = "dv_pyo3",
    srcs = ["src/lib.rs"],
    deps = ["//core:dv_rs"],
)

# Python library that exposes the extension module
# This creates a "dv" package by making __init__.py available at the root level
py_library(
    name = "dv_py",
    srcs = [
        "dv_py/__init__.py",
    ],
    data = [":dv_pyo3"],
    imports = ["."],
    visibility = ["//visibility:public"],
)

# =============================================================================
# Tests
# =============================================================================

py_test(
    name = "test_dv",
    srcs = ["tests/test_dv.py"],
    deps = [
        ":dv_py",
        "@pypi//pytest:pkg",
    ],
)

