load("@rules_python//python:defs.bzl", "py_library", "py_test")

package(default_visibility = ["//visibility:public"])

# Export files for version management and packaging metadata
exports_files([
    "pyproject.toml",
])

genrule(
    name = "dv_pyo3_ext_pkg",
    srcs = ["//generated/diplomat/nanobind:dv_pyo3.so"],
    outs = ["dv_py/dv_pyo3.so"],
    cmd = "cp $< $@",
)

# Python library that exposes the generated nanobind extension module
py_library(
    name = "dv_py",
    srcs = [
        "dv_py/__init__.py",
    ],
    data = [":dv_pyo3_ext_pkg"],
    imports = ["."],
    visibility = ["//visibility:public"],
)

# =============================================================================
# Tests
# =============================================================================

py_test(
    name = "test_dv",
    srcs = ["tests/test_dv.py"],
    deps = [
        ":dv_py",
        "@pypi//pytest:pkg",
    ],
)
