[package]
name = "dv_py"
version = "0.1.6"
edition = "2021"
authors = [ "Alex Tacescu <alextac98@gmail.com>",]
homepage = "https://dv.alextac.com"
repository = "https://github.com/alextac98/dv"
license = "Apache-2.0"
description = "Python bindings for dv (DimensionalVariable)"
publish = false

[lib]
name = "dv_py"
crate-type = [ "cdylib",]
path = "src/lib.rs"

[dependencies.dv_rs]
package = "dv"
path = "../core"

[dependencies.pyo3]
version = "0.21"
features = [ "extension-module",]
