[project]
name = "dv_py"
version = "0.3.3"
description = "Python bindings for dv (DimensionalVariable) - keeping track of units and dimensions for physical quantities"
readme = "pip-readme.md"
requires-python = ">=3.8"
classifiers = [ "Development Status :: 4 - Beta", "Intended Audience :: Developers", "Intended Audience :: Science/Research", "License :: OSI Approved :: Apache Software License", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.8", "Programming Language :: Python :: 3.9", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11", "Programming Language :: Python :: 3.12", "Programming Language :: Python :: 3.13", "Programming Language :: Python :: 3.14", "Programming Language :: Python :: 3.15", "Topic :: Scientific/Engineering", "Topic :: Scientific/Engineering :: Physics", "Topic :: Software Development :: Libraries",]
keywords = [ "units", "dimensions", "physical-quantities", "unit-conversion", "unit-checking",]
[[project.authors]]
name = "Alex Tacescu"
email = "alextac98@gmail.com"

[project.license]
text = "Apache-2.0"

[project.urls]
Homepage = "https://dv.alextac.com"
Documentation = "https://dv.alextac.com/docs/python"
Repository = "https://github.com/alextac98/dv"
Issues = "https://github.com/alextac98/dv/issues"
