load("@rules_uv//uv:pip.bzl", "pip_compile")
load("@rules_python//python:defs.bzl", "py_binary")

pip_compile(
    name = "generate_requirements_txt",
    requirements_in = ":requirements.in",
    requirements_txt = ":requirements.txt",
)

# ==============================================================================
# Version Setting / Checking
# ==============================================================================

py_binary(
    name = "update_versions",
    srcs = ["update_versions.py"],
    data = [
        "//:VERSION.toml",
        "//core:Cargo.toml",
        "//python:Cargo.toml",
        "//python:pyproject.toml",
    ],
    deps = [
        "@pypi//toml",
        "@pypi//requests",
    ],
)