[package]
name = "dv_capi"
version = "0.1.0"
edition = "2021"
authors = ["Alex Tacescu <alextac98@gmail.com>"]
license = "Apache-2.0"
description = "C ABI bindings for dv (DimensionalVariable)"
publish = false

[lib]
name = "dv_capi"
crate-type = ["staticlib", "cdylib"]
path = "src/lib.rs"

[dependencies]
dv = { path = "../../core" }
